--- a/.github/workflows/quality-guardrails.yml
+++ b/.github/workflows/quality-guardrails.yml
@@ -6,9 +6,9 @@ name: Quality Guardrails
 # | --- | --- | --- |
 # | [tool.pytest.ini_options] | pytest --cov --cov-report=term-missing --cov-report=xml | Test discovery/runtime flags and marker/filter behavior apply to the test-cov job. |
 # | [tool.coverage.run], [tool.coverage.report] | pytest --cov --cov-report=term-missing --cov-report=xml | Coverage configuration (including fail_under) is enforced by pytest-cov in test-cov. |
-# | [tool.mypy] (Tier 1 strict scope) | pre-commit run --all-files | mypy hook is scoped to strict core/application paths for fast local feedback. |
+# | [tool.mypy] (Tier 1 strict scope) | make qa-hook-parity | mypy hook is scoped to strict core/application paths for fast local feedback. |
 # | [tool.mypy] (full surface) | mypy --config-file=pyproject.toml src tests | Separate CI gate for tests + legacy/BDD namespaces under bounded relaxations. |
-# | [tool.ruff], [tool.black], [tool.isort], other lint tooling sections | pre-commit run --all-files | Lint/format policy is enforced through configured pre-commit hooks. |
+# | [tool.ruff], [tool.black], [tool.isort], other lint tooling sections | make qa-hook-parity | Lint/format policy is enforced through configured pre-commit hooks. |
 
 on:
   pull_request:
@@ -28,11 +28,11 @@ jobs:
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
 
-      - name: Verify pre-commit parity
-        run: python .github/scripts/check_precommit_parity.py
+      - name: Print environment provenance
+        run: python .github/scripts/print_env_provenance.py
 
-      - name: Run pre-commit (lint/type)
-        run: pre-commit run --all-files
+      - name: Run hook parity QA target
+        run: make qa-hook-parity
 
   baseline-test-cov:
     runs-on: ubuntu-latest
@@ -45,6 +45,9 @@ jobs:
 
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
+
+      - name: Print environment provenance
+        run: python .github/scripts/print_env_provenance.py
 
       - name: Run tests with coverage gate
         run: pytest --cov --cov-report=term-missing --cov-report=xml
@@ -60,6 +63,9 @@ jobs:
 
       - name: Verify Python support policy sync
         run: python .github/scripts/check_python_support_policy.py
+
+      - name: Print environment provenance
+        run: python .github/scripts/print_env_provenance.py
 
       - name: Run mypy (full type surface)
         run: mypy --config-file=pyproject.toml src tests
