--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ test = [
   "pytest-cov>=5,<6",
   "pre-commit>=4,<5",
   "gherkin-official>=30,<31",
+  "typing-extensions>=4.8,<5",
 ]
 bdd = [
   "behave>=1.2.6,<2",
